tests/ui/typeck/issue-92481.stderr
error: mismatched closing delimiter: `)`
  --> $DIR/issue-92481.rs:5:6
   |
LL | fn r({) {
   |     -^^
   |     |||
   |     ||mismatched closing delimiter
   |     ||missing open `(` for this delimiter
   |     |unclosed delimiter
   |     closing delimiter possibly meant for this

error: aborting due to 1 previous error

